--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   fluttertoast: ^8.1.2
   shared_preferences: ^2.0.17
   pull_to_refresh: ^2.0.0
+  webview_flutter: ^4.0.7
 
 dev_dependencies:
   flutter_test:
