--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.0.17
   pull_to_refresh: ^2.0.0
   webview_flutter: ^4.0.7
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
